Refactor: 무한스크롤 코드 개선